[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["saeima"]

[project]
name = "saeima"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27",
    "click>=8.1",
    "pandas>=2.3.3",
]

[dependency-groups]
dev = [
    "pre-commit>=3.5.0",
    "ruff>=0.15.15",
]

[tool.ruff]
target-version = "py310"
line-length = 88
src = ["saeima"]
exclude = ["data"]   # scraped HTML/PDFs, not Python
[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort (import sorting)
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
]
[tool.ruff.format]
quote-style = "double"
